--- a/index.html
+++ b/index.html
@@ -10,21 +10,15 @@
 <body>
     <header>
         <nav>
+            <div id="home">Home</div>
+
+            <div id="menu">Menu</div>
+            <div id="contacts">Contacts</div>
 
         </nav>
     </header>
     <div class="content" id="content">
-        <div class="homeContainer">
-            <div class="hero">
-                <h1>Milkshake Diner</h1>
-                <p>We have more flavors of milkshakes, sweets, candies than you can find anywhere else in the world.</p>
-            </div>
-            <div class="picCollection">
-                <img src='3269a6aacd425e69451c.svg'>
-                <img src='4c0b73187abe4351521f.svg'>
-                <img src='aef2c7cddfe4d3f510d5.svg'>
-            </div>
-        </div>
+
     </div>
 </body>
 
